Fix neonGreen flicker animation
Color was red and lenght was wrong

--- a/styles.css
+++ b/styles.css
@@ -255,7 +255,7 @@ body {
   0 0 0.1em #009900,
   0 5px 3px #000000;
 
-  animation: neonFlickerRed 7s infinite;
+  animation: neonFlickerGreen 6s infinite;
 
 }
 
